# apgi-experiments

./: .coverage  .dockerignore  .env  .env.example  .gitignore  Dockerfile  GUI-Experiment-Registry.py  GUI-Launcher.py  GUI-Simple.py  GUI-Template-Background.py  GUI-Template.py  GUI.py  GUI_INTEGRATION_SUMMARY.md  GUI_README.md  INTEGRATION_FIX_SUMMARY.md  IPI-Parameter-Estimation.md  IPI-Testable-Predictions.md  NEWREPORT.md  README.md  REPORT.md  TESTING-PLAN.md  TESTING-SUITE.md  TODO.md  Tests-GUI.py  Utils-GUI.py  VERIFICATION_REPORT.md  apgi_falsification_gui.py  apgi_model.py  apgi_norms.csv  apgi_norms_robust.csv  auto-improvements.md  auto_improve_experiments_gui.py  config.json  coverage.xml  delete_pycache.py  deploy.bat  deploy.sh  docker-compose.yml  experiment_registry_gui.py  gui.py  (+24 more)
.ci/: test_history.db
.claude/: settings.local.json
apgi_framework/: __init__.py  __main__.py  __version__.py  cache.py  cli.py  collaboration.py  computation.py  config.py  exceptions.py  experimental_control.py  fusion.py  installation_validator.py  main_controller.py  network.py  notification.py  system_validator.py  workflow_orchestrator.py
apgi_gui/: __init__.py  app.py
apps/: apgi-design.py  apgi_falsification_gui.py  apgi_falsification_gui_refactored.py  apgi_template.py  apgi_tkinter_template.py  chatgpt-design.py  experiment_runner_gui.py  gem-design.py  gemini-design.py  grok-design.py  gui_template.py  gui_template_background.py  mistral-design.py  qwen-design.py
auto-improvement/: USAGE.md  autonomous_agent.py  batch_upgrade_run_files.py  prepare.py  prepare_igt.py  pyproject.toml  results.tsv  run_ai_benchmarking.py  run_artificial_grammar_learning.py  run_attentional_blink.py  run_binocular_rivalry.py  run_change_blindness.py  run_change_blindness_full_apgi.py  run_drm_false_memory.py  run_dual_n_back.py  run_eriksen_flanker.py  run_go_no_go.py  run_igt.py  run_inattentional_blindness.py  run_interoceptive_gating.py  run_iowa_gambling_task.py  run_masking.py  run_metabolic_cost.py  run_multisensory_integration.py  run_navon_task.py  run_posner_cueing.py  run_probabilistic_category_learning.py  run_serial_reaction_time.py  run_simon_effect.py  run_somatic_marker_priming.py  run_sternberg_memory.py  run_stop_signal.py  run_stroop_effect.py  run_time_estimation.py  run_virtual_navigation.py  run_visual_search.py  run_working_memory_span.py  standard_apgi_runner.py  train.py  ultimate_apgi_template.py  (+1 more)
benchmark_results/: agent_memory_stats.txt  agent_update_profile.txt  analysis_scaling.csv  stimulus_throughput.txt
benchmarks/: README.md  conftest.py  critical_path_profiling.py  profiling_utils.py  test_performance.py
cache/: cache_metadata.json
ci_reports/: pipeline_report_1772740672.json  pipeline_summary_1772740672.txt
config/: test_config_template.json
core/: experiment.py
coverage_reports/: coverage_report_test_integration.json
data/: demo_demo.csv  demo_demo.json  demo_demo_metadata.json  demo_demo_processed.json  parameter_estimation.db  sub_01_sess_01_metadata.json  sub_01_sess_02_metadata.json  sub_02_sess_01_metadata.json  sub_02_sess_02_metadata.json  sub_03_sess_01_metadata.json  sub_03_sess_02_metadata.json
demo_output/: demonstration_summary.json  experiment_logs.json  validation_report.json
docs/: APGI-Equations.md  APGI-Falsification.md  APGI-Ignition-Equation.md  APGI-Parameter-Estimation.md  APGI-Parameter-Specifications.md  BAYESIAN-MODELING.md  Benchmarks.md  CLI-REFERENCE.md  CLI_REFERENCE.md  Clinical-Parameter-Extraction.md  DOCUMENTATION.md  DOCUMENTATION_INDEX.md  ERROR-HANDLING.md  EXPERIMENTS.md  EXPERIMENTS_GUIDE.md  Falsification-GUI.md  Framework Falsification Testing.md  Framework-Examples.md  GUI-ENTRY-POINTS.md  GUI-INTEGRATION.md  GUI-README.md  GUI-VISUAL-GUIDE.md  IPI-Falsification.md  IPI-Ignition-Equation.md  Incident-response-playbooks.md  MATH.md  Neural.md  PUPILLOMETRY-PHYSIOLOGICAL.md  Parameter--Validation--Guide.md  Parameter-Validation-Features.md  QUICK-START-GUIDE.md  QUICK-START.md  QUICK_START_GUIDE.md  README.md  RESULTS-INTERPRETATION.md  RESULTS-INTERPRETATION_GUIDE.md  SIGNAL-PROCESSING.md  TASK_3.1_IMPLEMENTATION_SUMMARY.md  TASK_3.2_ERROR_HANDLING_SUMMARY.md  TESTING.md  (+24 more)
examples/: 01_run_primary_falsification_test.py  02_batch_processing_configurations.py  03_custom_analysis_saved_results.py  04_extending_falsification_criteria.py  coverage_collector_demo.py  data_loader.py  index.md  parameter_validation_example.py  validation_and_error_handling_example.py
generated_tests/: test_apgi_framework_core_data_models.py  test_apgi_framework_core_equation.py  test_apgi_framework_core_precision.py  test_apgi_framework_core_prediction_error.py  test_apgi_framework_core_somatic_marker.py  test_apgi_framework_core_threshold.py
ipi_framework/: __init__.py  __main__.py  cli.py  config.py  exceptions.py  experimental_control.py  main_controller.py  system_validator.py  workflow_orchestrator.py
k8s/: deployment.yaml
models/: __init__.py  apgi_model.py
scripts/: replace_print_with_logging.py
session_data/: test_session_test_participant.json
test_cache/: cache.db
test_data_output/: test_file.json
tests/: conftest.py  cross_browser_compatibility.py  test_activity_logging_properties.py  test_adaptive_comprehensive.py  test_adaptive_coverage.py  test_adaptive_module.py  test_adaptive_module_simple.py  test_adaptive_simple.py  test_analysis_coverage.py  test_analysis_engine.py  test_analysis_engine_comprehensive.py  test_analysis_engine_coverage.py  test_anti_pattern_detection_properties.py  test_apgi_agent.py  test_bayesian_coverage.py  test_cardiac_processor_coverage.py  test_change_impact_analysis_properties.py  test_cli_coverage.py  test_cli_gui_parity_properties.py  test_cli_module.py  test_cli_smoke.py  test_cli_validation_coverage.py  test_clinical_biomarkers.py  test_clinical_module.py  test_clinical_modules.py  test_clinical_parameter_extraction_coverage.py  test_clinical_simple.py  test_concurrent_access.py  test_config_manager.py  test_core_analysis.py  test_core_coverage.py  (+74 more)
(+668 files in other folders)
