[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apgi-framework-test-enhancement"
version = "1.0.0"
description = "Comprehensive Test Enhancement for APGI Framework"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "APGI Research Team", email = "research@apgi.org"}
]
maintainers = [
    {name = "APGI Research Team", email = "research@apgi.org"}
]
keywords = ["testing", "coverage", "property-based-testing", "consciousness-research", "apgi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "matplotlib>=3.5.0",
    "pandas>=1.3.0",
    "coverage>=6.0",
    "pytest>=7.0",
    "hypothesis>=6.0",
]

[project.optional-dependencies]
gui = [
    "PySide6>=6.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.0",
    "pytest-timeout>=2.0",
    "hypothesis>=6.0",
    "black>=22.0",
    "flake8>=5.0",
    "mypy>=1.0",
    "pre-commit>=2.0",
    "sphinx>=4.0",
    "sphinx-rtd-theme>=1.0",
]
performance = [
    "memory-profiler>=0.60",
    "psutil>=5.8",
    "line-profiler>=3.0",
]
ml = [
    "scikit-learn>=1.0",
    "tensorflow>=2.8",
    "torch>=1.10",
]
neural = [
    "mne>=1.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0",
]
all = [
    "PySide6>=6.0",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.0",
    "hypothesis>=6.0",
    "black>=22.0",
    "flake8>=5.0",
    "mypy>=1.0",
    "memory-profiler>=0.60",
    "psutil>=5.8",
    "mne>=1.0",
    "scikit-learn>=1.0",
]

[project.urls]
Homepage = "https://github.com/apgi-research/apgi-framework"
Repository = "https://github.com/apgi-research/apgi-framework"
Documentation = "https://apgi-framework.readthedocs.io/"
"Bug Reports" = "https://github.com/apgi-research/apgi-framework/issues"
Changelog = "https://github.com/apgi-research/apgi-framework/blob/main/CHANGELOG.md"

[project.scripts]
apgi-test = "apgi_framework.testing.main:main"
apgi-test-gui = "apgi_framework.testing.main:main"
apgi-coverage = "apgi_framework.testing.main:main"
apgi-deploy = "apgi_framework.deployment.automation:main"
apgi-dashboard = "apgi_framework.gui.interactive_dashboard:main"

[tool.setuptools]
packages = ["apgi_framework"]
include-package-data = true

[tool.setuptools.package-data]
apgi_framework = [
    "gui/templates/*.html",
    "gui/static/*",
    "config/*.json",
    "config/*.yaml",
    "data/*.json",
    "testing/templates/*",
]

# Testing Configuration for APGI Framework
# This file provides centralized configuration for all testing activities
# Note: pytest configuration temporarily disabled due to collection issues

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
precision = 2

[tool.coverage.html]
directory = "coverage_html_report"

[tool.coverage.xml]
output = "coverage.xml"

# Testing Categories Configuration
[testing.categories.unit]
description = "Fast, isolated unit tests"
timeout = 60
parallel = true
max_workers = 4

[testing.categories.integration]
description = "Slower integration tests with external dependencies"
timeout = 300
parallel = false

[testing.categories.gui]
description = "GUI component tests"
timeout = 120
parallel = false
display_required = true

[testing.categories.performance]
description = "Performance benchmarks and load tests"
timeout = 600
parallel = false
baseline_required = true

[testing.categories.research]
description = "Domain-specific research experiments"
timeout = 1800
parallel = false
data_required = true

# Test Organization Structure
[testing.structure]
# Main test directories
main_dirs = ["tests", "apgi_framework/tests", "research/*/tests"]

# Test categorization by directory pattern
patterns = [
    {pattern = "tests/unit/*", category = "unit"},
    {pattern = "tests/integration/*", category = "integration"},
    {pattern = "tests/gui/*", category = "gui"},
    {pattern = "tests/performance/*", category = "performance"},
    {pattern = "benchmarks/*", category = "performance"},
    {pattern = "research/*/tests/*", category = "research"}
]

# Reporting Configuration
[testing.reporting]
# Default report formats
formats = ["json", "html", "console"]

# Report output directory
output_dir = "test_reports"

# Include coverage in reports
include_coverage = true

# Include performance metrics
include_performance = true

# Include test execution timeline
include_timeline = true

# Notification settings
[testing.notifications]
# Enable desktop notifications
enable_desktop = false

# Email settings for CI/CD
email_on_failure = false
email_recipients = []

# Slack integration
slack_webhook = ""
slack_channel = "#testing"

# Continuous Integration Settings
[testing.ci]
# Default CI platform
platform = "github"  # github, gitlab, jenkins

# Artifacts to upload
artifacts = [
    "test_reports/*",
    "coverage_html_report/*",
    "coverage.xml"
]

# Test result thresholds for passing
[testing.ci.thresholds]
min_coverage_percent = 80
max_test_duration_seconds = 1800
max_failures = 0
max_errors = 0

# Parallel execution settings
[testing.parallel]
# Enable parallel test execution by default
enabled = true

# Default number of workers (auto-detect if not specified)
default_workers = "auto"

# Maximum number of workers
max_workers = 8

# Categories that should not run in parallel
exclude_categories = ["integration", "gui", "performance"]

# Test Data Management
[testing.data]
# Directory for test data
data_dir = "test_data"

# Directory for test fixtures
fixtures_dir = "test_fixtures"

# Auto-generate test data
auto_generate = false

# Clean up test data after runs
cleanup_after = true

# Test Environment Configuration
[testing.environment]
# Default test environment
default_env = "test"

# Environment-specific settings
[testing.environment.test]
database_url = "sqlite:///:memory:"
debug = true
log_level = "DEBUG"

[testing.environment.ci]
database_url = "postgresql://test:test@localhost/test_db"
debug = false
log_level = "INFO"

# Mock external services in CI
mock_external = true
