[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apgi-framework-test-enhancement"
version = "1.0.0"
description = "Comprehensive Test Enhancement for APGI Framework"
readme = "README.md"
license = "MIT"
authors = [
    {name = "APGI Research Team", email = "research@apgi.org"}
]
maintainers = [
    {name = "APGI Research Team", email = "research@apgi.org"}
]
keywords = ["testing", "coverage", "property-based-testing", "consciousness-research", "apgi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "matplotlib>=3.5.0",
    "pandas>=1.3.0",
    "coverage>=6.0",
    "pytest>=7.0",
    "hypothesis>=6.0",
]

[project.optional-dependencies]
gui = [
    "customtkinter>=5.2.0",
    "Pillow>=10.0.0",
    "pyautogui>=0.9.54",
    "pygetwindow>=0.0.9",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.0",
    "pytest-timeout>=2.0",
    "pytest-xvfb>=3.0.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0",
    "pre-commit>=2.0",
    "sphinx>=4.0",
    "sphinx-rtd-theme>=1.0",
]
ml = [
    "scikit-learn>=1.3.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "torchaudio>=2.0.0",
    "tensorflow>=2.8",
]
neural = [
    "mne>=1.4.0",
    "nibabel>=5.1.0",
    "numba>=0.57.0",
    "h5py>=3.9.0",
]
visualization = [
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.15.0",
]
web = [
    "flask>=2.3.0",
    "flask-socketio>=5.3.0",
    "streamlit>=1.25.0",
    "jinja2>=3.1.0",
]
reporting = [
    "reportlab>=3.6.0",
    "opencv-python>=4.8.0",
]
jupyter = [
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
]
performance = [
    "psutil>=5.9.0",
    "memory-profiler>=0.60",
    "line-profiler>=3.0",
]
stats = [
    "statsmodels>=0.14.0",
]
network = [
    "requests>=2.31.0",
]
all = [
    # GUI
    "customtkinter>=5.2.0",
    "Pillow>=10.0.0",
    "pyautogui>=0.9.54",
    "pygetwindow>=0.0.9",
    # Dev tools
    "pytest>=7.4.0",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.0",
    "pytest-timeout>=2.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0",
    "pre-commit>=2.0",
    "sphinx>=4.0",
    "sphinx-rtd-theme>=1.0",
    # ML/AI
    "scikit-learn>=1.3.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "torchaudio>=2.0.0",
    "tensorflow>=2.8",
    # Neural
    "mne>=1.4.0",
    "nibabel>=5.1.0",
    "numba>=0.57.0",
    "h5py>=3.9.0",
    # Visualization
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.15.0",
    # Web
    "flask>=2.3.0",
    "flask-socketio>=5.3.0",
    "streamlit>=1.25.0",
    "jinja2>=3.1.0",
    # Reporting
    "reportlab>=3.6.0",
    "opencv-python>=4.8.0",
    # Jupyter
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
    # Performance
    "psutil>=5.9.0",
    "memory-profiler>=0.60",
    "line-profiler>=3.0",
    # Stats
    "statsmodels>=0.14.0",
    # Network
    "requests>=2.31.0",
]

[project.urls]
Homepage = "https://github.com/apgi-research/apgi-framework"
Repository = "https://github.com/apgi-research/apgi-framework"
Documentation = "https://apgi-framework.readthedocs.io/"
"Bug Reports" = "https://github.com/apgi-research/apgi-framework/issues"
Changelog = "https://github.com/apgi-research/apgi-framework/blob/main/CHANGELOG.md"

[project.scripts]
apgi-test = "apgi_framework.testing.main:main"
apgi-test-gui = "apgi_framework.testing.main:main"
apgi-coverage = "apgi_framework.testing.main:main"
apgi-deploy = "apgi_framework.deployment.automation:main"
apgi-dashboard = "apgi_framework.gui.interactive_dashboard:main"

[tool.setuptools]
packages = ["apgi_framework", "tests"]
include-package-data = true

[tool.setuptools.package-data]
apgi_framework = [
    "gui/templates/*.html",
    "gui/static/*",
    "config/*.json",
    "config/*.yaml",
    "data/*.json",
    "testing/templates/*",
]

# Testing Configuration for APGI Framework
# This file provides centralized configuration for all testing activities
# Note: pytest configuration temporarily disabled due to collection issues

[tool.pytest.ini_options]
testpaths = ["tests", "apgi_framework/tests", "research"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--disable-warnings",
    "--tb=short",
    "--cov=apgi_framework",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-report=term-missing",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gui: marks tests that require GUI/display",
    "integration: marks tests as integration tests",
    "property: marks tests as property-based tests",
]

# GUI tests should run with xvfb for headless testing
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
precision = 2

[tool.coverage.html]
directory = "coverage_html_report"

[tool.coverage.xml]
output = "coverage.xml"

# Testing Categories Configuration
[testing.categories.unit]
description = "Fast, isolated unit tests"
timeout = 60
parallel = true
max_workers = 4

[testing.categories.integration]
description = "Slower integration tests with external dependencies"
timeout = 300
parallel = false

[testing.categories.gui]
description = "GUI component tests"
timeout = 120
parallel = false
display_required = true

[testing.categories.performance]
description = "Performance benchmarks and load tests"
timeout = 600
parallel = false
baseline_required = true

[testing.categories.research]
description = "Domain-specific research experiments"
timeout = 1800
parallel = false
data_required = true

# Test Organization Structure
[testing.structure]
# Main test directories
main_dirs = ["tests", "apgi_framework/tests", "research/*/tests"]

# Test categorization by directory pattern
patterns = [
    {pattern = "tests/unit/*", category = "unit"},
    {pattern = "tests/integration/*", category = "integration"},
    {pattern = "tests/gui/*", category = "gui"},
    {pattern = "tests/performance/*", category = "performance"},
    {pattern = "benchmarks/*", category = "performance"},
    {pattern = "research/*/tests/*", category = "research"}
]

# Reporting Configuration
[testing.reporting]
# Default report formats
formats = ["json", "html", "console"]

# Report output directory
output_dir = "test_reports"

# Include coverage in reports
include_coverage = true

# Include performance metrics
include_performance = true

# Include test execution timeline
include_timeline = true

# Notification settings
[testing.notifications]
# Enable desktop notifications
enable_desktop = false

# Email settings for CI/CD
email_on_failure = false
email_recipients = []

# Slack integration
slack_webhook = ""
slack_channel = "#testing"

# Continuous Integration Settings
[testing.ci]
# Default CI platform
platform = "github"  # github, gitlab, jenkins

# Artifacts to upload
artifacts = [
    "test_reports/*",
    "coverage_html_report/*",
    "coverage.xml"
]

# Test result thresholds for passing
[testing.ci.thresholds]
min_coverage_percent = 80
max_test_duration_seconds = 1800
max_failures = 0
max_errors = 0

# Parallel execution settings
[testing.parallel]
# Enable parallel test execution by default
enabled = true

# Default number of workers (auto-detect if not specified)
default_workers = "auto"

# Maximum number of workers
max_workers = 8

# Categories that should not run in parallel
exclude_categories = ["integration", "gui", "performance"]

# Test Data Management
[testing.data]
# Directory for test data
data_dir = "test_data"

# Directory for test fixtures
fixtures_dir = "test_fixtures"

# Auto-generate test data
auto_generate = false

# Clean up test data after runs
cleanup_after = true

# Test Environment Configuration
[testing.environment]
# Default test environment
default_env = "test"

# Environment-specific settings
[testing.environment.test]
database_url = "sqlite:///:memory:"
debug = true
log_level = "DEBUG"

[testing.environment.ci]
database_url = "postgresql://test:test@localhost/test_db"
debug = false
log_level = "INFO"

# Mock external services in CI
mock_external = true

[tool.mypy]
# Ignore missing imports for modules without type stubs
ignore_missing_imports = true

# Allow untyped defs for existing codebase
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false

# Disable strict mode for compatibility
strict = false
warn_return_any = false
warn_unused_configs = false

# Ignore specific modules that don't have type stubs
[[tool.mypy.overrides]]
module = [
    "customtkinter.*",
    "tkinter.*",
    "PIL.*",
    "pyautogui.*",
    "pygetwindow.*",
    "winreg.*",
]
ignore_missing_imports = true

# More permissive settings for GUI modules
[[tool.mypy.overrides]]
module = [
    "apgi_gui.*",
]
ignore_missing_imports = true
disallow_untyped_defs = false
check_untyped_defs = false

# Slightly stricter for framework core modules
[[tool.mypy.overrides]]
module = [
    "apgi_framework.*",
]
ignore_missing_imports = true
disallow_untyped_defs = false
check_untyped_defs = false
